--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>my super website</title>
   </head>
+
   <body>
-  
+    <h1>MY SUPER WEB SITE</h1>
   </body>
 </html>
